smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Data_Provider_Class__c.field-meta.xml
<CustomField>
    <fullName>Data_Provider_Class__c</fullName>
    <description>Data Provider class of the Apex Data Source.
Must be global class implementing smartlists.SmartListApexSourceInterface2</description>
    <label>Data Provider Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>