smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Disable_Autoload__c.field-meta.xml
<CustomField>
    <fullName>Disable_Autoload__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, no records are automatically loaded when the list is displayed for the first time
If unchecked, records are automatically loaded when the list is displayed for the first time</inlineHelpText>
    <label>Disable Autoload on Initialization</label>
    <type>Checkbox</type>
</CustomField>