smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Display_Mode__c.field-meta.xml
<CustomField>
    <fullName>Display_Mode__c</fullName>
    <inlineHelpText>Display the list as Table or Tiles</inlineHelpText>
    <label>Display Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Table</fullName>
                <default>true</default>
                <label>Table</label>
            </value>
            <value>
                <fullName>Tiles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>