smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Display_Quick_Filters_All_the_Time__c.field-meta.xml
<CustomField>
    <fullName>Display_Quick_Filters_All_the_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Display the Filters Panel all the time. The panel cannot be closed</inlineHelpText>
    <label>Display Filters Panel All the Time</label>
    <type>Checkbox</type>
</CustomField>