smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Enable_CRUD_Actions__c.field-meta.xml
<CustomField>
    <fullName>Enable_CRUD_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, New, Edit and Delete record actions are available in the list if the running user has the corresponding permissions on the object</inlineHelpText>
    <label>Enable all Record Actions</label>
    <type>Checkbox</type>
</CustomField>