smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Enable_Edit_Record_Action__c.field-meta.xml
<CustomField>
    <fullName>Enable_Edit_Record_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Edit record action is displayed if the running user has Edit right on the object.
This property is only considered when Enable all Record Actions is not checked</inlineHelpText>
    <label>Enable Edit Record Action</label>
    <type>Checkbox</type>
</CustomField>