smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Enable_New_Record_Action__c.field-meta.xml
<CustomField>
    <fullName>Enable_New_Record_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The New record action is displayed if the running user has Create right on the object.
This property is only considered when Enable all Record Actions is not checked</inlineHelpText>
    <label>Enable New Record Action</label>
    <type>Checkbox</type>
</CustomField>