smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Filters_Max_Height__c.field-meta.xml
<CustomField>
    <fullName>Filters_Max_Height__c</fullName>
    <inlineHelpText>Maximum display height in pixels of the filters. A scrollbar will be displayed in the Filters Panel if the height of the filters is greater that this value.
Leave empty if you don&apos;t want to limit the display height of the filters</inlineHelpText>
    <label>Filters Panel Max Height</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>