smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Filters_Panel_Layout__c.field-meta.xml
<CustomField>
    <fullName>Filters_Panel_Layout__c</fullName>
    <inlineHelpText>Specifies if the Filters Panel is displayed on the right or the left of the list and if a user action is needed to display/hide it.
On Demand: users needs to click the Show Filters button to display the panel.
All the Time: the panel is always displayed and cannot be hidden</inlineHelpText>
    <label>Filters Panel Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RightOD</fullName>
                <default>true</default>
                <label>Right - On Demand</label>
            </value>
            <value>
                <fullName>RightAT</fullName>
                <label>Right - All the Time</label>
            </value>
            <value>
                <fullName>LeftOD</fullName>
                <label>Left - On Demand</label>
            </value>
            <value>
                <fullName>LeftAT</fullName>
                <label>Left - All the Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>