smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/List_Icon__c.field-meta.xml
<CustomField>
    <fullName>List_Icon__c</fullName>
    <inlineHelpText>If empty, Smart Lists will try to determine the icon from the SObject. If you want to use your own icon, enter the name of a SLDS icon.
Required for Apex Data Sources without SObject.</inlineHelpText>
    <label>List Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>