smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/List_Label__c.field-meta.xml
<CustomField>
    <fullName>List_Label__c</fullName>
    <inlineHelpText>If empty, the list label will be the plural label of the SObject: Cases for Case,
If you want to use your own label, enter a text value or $Label­.CustomLabelName.
Required for Apex Data Sources without SObject.</inlineHelpText>
    <label>List Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>