smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Max_Row_Selected__c.field-meta.xml
<CustomField>
    <fullName>Max_Row_Selected__c</fullName>
    <defaultValue>2000</defaultValue>
    <inlineHelpText>Maximum number of rows that can be selected in the list</inlineHelpText>
    <label>Max Row Selected</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>