smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Maximum_Number_of_Records__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Number_of_Records__c</fullName>
    <defaultValue>2000</defaultValue>
    <inlineHelpText>Maximum number of records displayed in the list</inlineHelpText>
    <label>Maximum Number of Records</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>