smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <inlineHelpText>For indirect relationships (parent-child relationships not using the parent record id), API name of the parent object
Example of indirect relationship: Case is the parent object and the list is displaying the Contacts related to the Account of the parent Case record -&gt; Parent Object = Case and Parent Key Field = AccountId</inlineHelpText>
    <label>Indirect Relationship: Parent Object (De</label>
    <length>255</length>
    <type>Text</type>
</CustomField>