smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Row_Number_Start__c.field-meta.xml
<CustomField>
    <fullName>Row_Number_Start__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>First number of the rows counter</inlineHelpText>
    <label>Row Number Start</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>