smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Selectable_Rows__c.field-meta.xml
<CustomField>
    <fullName>Selectable_Rows__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Selectable Rows</label>
    <type>Checkbox</type>
</CustomField>