smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Show_List_Header__c.field-meta.xml
<CustomField>
    <fullName>Show_List_Header__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Table Header</label>
    <type>Checkbox</type>
</CustomField>