smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Show_Row_Number_Column__c.field-meta.xml
<CustomField>
    <fullName>Show_Row_Number_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the row numbers are shown in the first column</inlineHelpText>
    <label>Show Row Number Column</label>
    <type>Checkbox</type>
</CustomField>