smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Show_SOSL_Search__c.field-meta.xml
<CustomField>
    <fullName>Show_SOSL_Search__c</fullName>
    <description>Display the SOSL Search box in the component or Filters Panel.
Cannot be selected when the visibility filter My Team is selected</description>
    <inlineHelpText>Show SOSL Search</inlineHelpText>
    <label>Show SOSL Search</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filters</fullName>
                <default>true</default>
                <label>In Filters Panel</label>
            </value>
            <value>
                <fullName>Component</fullName>
                <label>In Component</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Not Displayed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>