smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/SOQL_Default_Scope__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Default_Scope__c</fullName>
    <inlineHelpText>Default Visibility Filter displayed in the Visibility Filters combobox of the list</inlineHelpText>
    <label>Default Visibility Filter</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>everything</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>mine</fullName>
                <label>My</label>
            </value>
            <value>
                <fullName>team</fullName>
                <label>My Team</label>
            </value>
            <value>
                <fullName>subordinates</fullName>
                <label>My Subordinates</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>