smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/SOQL_Filter__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Filter__c</fullName>
    <inlineHelpText>SOQL filter used for querying the records. Example: Status = &apos;Open&apos;.
Used for SOQL type only</inlineHelpText>
    <label>SOQL Filter (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>