smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/SOQL_Scope_All__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Scope_All__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Returns all records visible by the running user</inlineHelpText>
    <label>Visibility Filter - All</label>
    <type>Checkbox</type>
</CustomField>