smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/SOQL_Scope_My__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Scope_My__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Returns records owned by the running user</inlineHelpText>
    <label>Visibility Filter - My</label>
    <type>Checkbox</type>
</CustomField>