smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/SOQL_Scope_My_Queues__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Scope_My_Queues__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Returns records owned by queues the running user is part of</inlineHelpText>
    <label>Visibility Filter - My Queues</label>
    <type>Checkbox</type>
</CustomField>