smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/SOQL_Scope_My_Subordinates__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Scope_My_Subordinates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Returns records owned by the direct subodinates of the running user in the role hierarchy</description>
    <label>Visibility Filter - My Subordinates</label>
    <type>Checkbox</type>
</CustomField>