smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/fields/Wrap_Column_Headers__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Column_Headers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If present, the column headers are wrapped up to 3 lines if they are too wide for the column width. If unchecked, the column headers are displayed in a singled line and clipped if needed</inlineHelpText>
    <label>Wrap Column Headers</label>
    <type>Checkbox</type>
</CustomField>