smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/validationRules/Check_Data_Provider.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Data_Provider</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Data_Source_Type__c, &quot;Apex Data Source&quot;) &amp;&amp;
ISBLANK(Data_Provider_Class__c)</errorConditionFormula>
    <errorDisplayField>Data_Provider_Class__c</errorDisplayField>
    <errorMessage>Data Provider Class is required for type &apos;	Apex Data Source&apos;</errorMessage>
</ValidationRule>