smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/validationRules/Check_Layout_For_Tiles.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Layout_For_Tiles</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Display_Mode__c , &apos;Tiles&apos;) &amp;&amp;  ISPICKVAL( Tile_Layout__c, &apos;&apos; )</errorConditionFormula>
    <errorDisplayField>Tile_Layout__c</errorDisplayField>
    <errorMessage>Tile Layout is required when Display Mode is Tiles</errorMessage>
</ValidationRule>