smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/validationRules/Check_List_Label_APEX.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_List_Label_APEX</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Data_Source_Type__c, &quot;Apex Data Source&quot;) &amp;&amp; 
ISBLANK(  SObject__c ) &amp;&amp; ISBLANK(  List_Label__c  )</errorConditionFormula>
    <errorDisplayField>List_Label__c</errorDisplayField>
    <errorMessage>List Label is required for APEX Data Source without SObject</errorMessage>
</ValidationRule>