smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/validationRules/Check_Parent_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Parent_Field</fullName>
    <active>true</active>
    <description>Obsolete</description>
    <errorConditionFormula>ISPICKVAL(Data_Source_Type__c, &quot;Apex Data Source with Parent&quot;) &amp;&amp;
 ISBLANK( Parent_Id_Field__c )</errorConditionFormula>
    <errorDisplayField>Parent_Id_Field__c</errorDisplayField>
    <errorMessage>Parent Id Field is required for Apex Data Source with Parent</errorMessage>
</ValidationRule>