smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/validationRules/Check_RowKey.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_RowKey</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Data_Source_Type__c, &quot;Apex Data Source&quot;) &amp;&amp;
ISBLANK( Row_Key__c )</errorConditionFormula>
    <errorDisplayField>Row_Key__c</errorDisplayField>
    <errorMessage>Row Key is required for type &apos; Apex Data Source&apos;</errorMessage>
</ValidationRule>