smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/validationRules/Check_Show_Sosl_Search.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Show_Sosl_Search</fullName>
    <active>false</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>Show_SOSL_Search_in_Quick_Filter__c</errorDisplayField>
    <errorMessage>Show SOQL Search in Quick Filter cannot be selected with the My Team records scope</errorMessage>
</ValidationRule>