smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/validationRules/Check_SObject.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_SObject</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(Data_Source_Type__c , &quot;SOQL with Sharing&quot;) ||ISPICKVAL(Data_Source_Type__c , &quot;SOQL without Sharing&quot;)) &amp;&amp;
ISBLANK(SObject__c)</errorConditionFormula>
    <errorDisplayField>SObject__c</errorDisplayField>
    <errorMessage>SObject is required for types &apos;SOQL with/without Sharing&apos;</errorMessage>
</ValidationRule>