smart-lists-2000/main/default/objects/Smart_List_Definition__mdt/validationRules/Check_Wrap_Text_Max_Lines.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Wrap_Text_Max_Lines</fullName>
    <active>true</active>
    <errorConditionFormula>Wrap_Text_Max_Lines__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Wrap_Text_Max_Lines__c</errorDisplayField>
    <errorMessage>Wrap Text Max Lines must be greater than 0</errorMessage>
</ValidationRule>